--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ h2{
      
 .works{
       width:30% ;
-      float: left;
+      display: inline-block;
      margin-left:1%;
     padding-left: 2%;
     
