--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ h2{
         background-repeat: no-repeat;
         background-position: right;
     }
+    .work-page{
+        width: 1170px;
+        margin: auto;
+    }
      
      
 .works{
@@ -65,6 +69,64 @@ h2{
     background-repeat: no-repeat;
     background-position: center;
 } 
+#clients-section{
+    background-image: url(images/footer-bg.png);
+    background-repeat: no-repeat;
+    background-position: right bottom;
+    padding-bottom: 0px;
+ 
+}
+#clients-section h2{
+    margin: 80px 0px;
+    text-align: center;
+    font-size: 32px;
+    text-transform: capitalize;
+}
+.container{
+    width: 1170px;
+    margin: auto;
+}
+.bruce-client{
+   text-align: center;
+ 
+}
+.bruce-client h4{
+    margin-bottom: 0;
+}
+.bruce-client span{
+    font-size: 12px;
+    font-weight: 600;
+    color: gray;
+ 
+}
+.bruce-client p{
+    font-size: 16px;
+    font-weight: 600;
+    color: rgb(26, 25, 25);
+}
+.contact-info{
+    width: 600px;
+    margin: auto;
+    background-image:linear-gradient(45deg,lightsalmon,tomato) ;
+    margin-top: 70px;
+    text-align: center;
+    padding: 50px 40px;
+    font-weight: 600;
+    border-radius: 5px;
+}
+.contact-info a{
+    text-decoration: none;
+    color: white;
+}
+/* Clients Section End */
+/* Footer Section */
+footer{
+    text-align: center;
+    font-size: 13px;
+    font-weight: 600;
+    color: gray;
+}
+/* Footer Section */
       
 
 
